@@ -7,8 +7,7 @@
     See LICENSES/GPL-2.0-only for more information.
 """
 
-from six.moves import cPickle as pickle
-
+import json
 import re
 import threading
 
@@ -16,7 +15,7 @@ import xbmc
 
 
 class PlaybackMonitorThread(threading.Thread):
-    def __init__(self, provider, context, playback_dict):
+    def __init__(self, provider, context, playback_json):
         super(PlaybackMonitorThread, self).__init__()
 
         self._stopped = threading.Event()
@@ -28,8 +27,8 @@ class PlaybackMonitorThread(threading.Thread):
 
         self.player = xbmc.Player()
 
-        self.playback_dict = playback_dict
-        self.video_id = self.playback_dict.get('video_id')
+        self.playback_json = playback_json
+        self.video_id = self.playback_json.get('video_id')
 
         self.total_time = 0.0
         self.current_time = 0.0
@@ -49,13 +48,13 @@ class PlaybackMonitorThread(threading.Thread):
         return not self.player.isPlaying() or self.context.abort_requested() or self.stopped()
 
     def run(self):
-        playing_file = self.playback_dict.get('playing_file')
-        play_count = self.playback_dict.get('play_count', 0)
-        use_history = self.playback_dict.get('use_history', False)
-        playback_stats = self.playback_dict.get('playback_stats')
-        refresh_only = self.playback_dict.get('refresh_only', False)
+        playing_file = self.playback_json.get('playing_file')
+        play_count = self.playback_json.get('play_count', 0)
+        use_history = self.playback_json.get('use_history', False)
+        playback_stats = self.playback_json.get('playback_stats')
+        refresh_only = self.playback_json.get('refresh_only', False)
         try:
-            seek_time = float(self.playback_dict.get('seek_time'))
+            seek_time = float(self.playback_json.get('seek_time'))
         except (ValueError, TypeError):
             seek_time = None
 
@@ -386,11 +385,11 @@ class YouTubePlayer(xbmc.Player):
         self.threads = active_threads
 
     def onPlayBackStarted(self):
-        if self.ui.get_home_window_property('playback_dict'):
-            playback_dict = pickle.loads(self.ui.get_home_window_property('playback_dict'))
-            self.ui.clear_home_window_property('playback_dict')
+        if self.ui.get_home_window_property('playback_json'):
+            playback_json = json.loads(self.ui.get_home_window_property('playback_json'))
+            self.ui.clear_home_window_property('playback_json')
             self.cleanup_threads()
-            self.threads.append(PlaybackMonitorThread(self.provider, self.context, playback_dict))
+            self.threads.append(PlaybackMonitorThread(self.provider, self.context, playback_json))
 
     def onPlayBackEnded(self):
         self.stop_threads()
