@@ -8,8 +8,7 @@
     See LICENSES/GPL-2.0-only for more information.
 """
 
-from six.moves import cPickle as pickle
-
+import json
 import random
 import re
 import traceback
@@ -100,17 +99,17 @@ def play_video(provider, context):
         except (ValueError, TypeError):
             pass
 
-        playback_dict = {
-            'video_id': video_id,
-            'playing_file': video_item.get_uri(),
-            'play_count': play_count,
-            'use_history': use_history,
-            'playback_stats': playback_stats,
-            'seek_time': seek_time,
-            'refresh_only': screensaver
+        playback_json = {
+            "video_id": video_id,
+            "playing_file": video_item.get_uri(),
+            "play_count": play_count,
+            "use_history": use_history,
+            "playback_stats": playback_stats,
+            "seek_time": seek_time,
+            "refresh_only": screensaver
         }
 
-        context.get_ui().set_home_window_property('playback_dict', pickle.dumps(playback_dict))
+        context.get_ui().set_home_window_property('playback_json', json.dumps(playback_json))
 
         xbmcplugin.setResolvedUrl(handle=context.get_handle(), succeeded=True, listitem=item)
 
